# calc-rs

./: Cargo.toml  LICENSE  README.md
src/: arithmetic.rs  cli.rs  evaluation.rs  fibonacci.rs  lib.rs  main.rs
wix/: License.rtf  main.wxs
