[package]
name = "calc-rs"
authors = ["Clayman"]
description = "A command-line calculator with everything you need"
license = "MIT"
version = "2.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Clay-6/calc-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chumsky = "0.8.0"
clap = {version = "3.1.6", features = ["derive"]}
num-bigint = "0.4.3"
