[package]
name = "calcrs"
authors = ["Clayman"]
description = "A command-line calculator with everything you need"
license = "MIT"
version = "2.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Clay-6/calc-rs"

[[bin]]
name = "calc-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
chumsky = "0.8.0"
clap = {version = "3.1.6", features = ["derive"]}
num-bigint = "0.4.3"
